@@ -1,3 +1,6 @@
+2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
+	* audio/Audio.cc: Remove some cruft that used to support the ring-buffers. Should prevent occasional SDL breakage.
+
 2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* utils.cc: fixed allocation bugs in get_system_path()
 
